@@ -120,6 +120,10 @@ struct config_file {
 	int tls_win_cert;
 	/** additional tls ports */
 	struct config_strlist* tls_additional_port;
+	/** TLS chiper **/
+	char* tls_ciphers;
+	/** TLS chipersuites (TLSv1.3) **/
+	char* tls_ciphersuites;
 
 	/** outgoing port range number of ports (per thread) */
 	int outgoing_num_ports;
